crates/core/src/utils/testing/tests/snapshots/caesura__utils__testing__tests__album_generator_tests__sample_flac16_441.snap
---
source: src/utils/testing/tests/album_generator_tests.rs
expression: snapshot
---
- directory: ~
  filename: ".generated"
  size: 0
  sha256: e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855
- directory: ~
  filename: Test Artist - Test Album - 01 Track One.flac
  size: 850247
  sha256: 8bf628eaa05a4da6ca338b12307dfb401eded30744f50acfebd50547eb8de9e3
  audio:
    duration_ms: 65000
    overall_bitrate: 104
    audio_bitrate: 104
    sample_rate: 44100
    bit_depth: 16
    channels: 2
    channel_mask: ~
    tags:
      VorbisComments:
        AlbumTitle: Test Album
        Comment: Processed by SoX
        EncoderSoftware: reference libFLAC 1.5.0 20250211
        RecordingDate: "2020"
        TrackArtist: Test Artist
        TrackNumber: "1"
        TrackTitle: Track One
    pictures:
      - picture_type: CoverFront
        mime_type: Png
        description: ~
        size: 849
        sha256: c73b57d8ad7de5ea9911190a5a1bcebe9b43b6250166b91b12f5c3ee969ba588
- directory: ~
  filename: Test Artist - Test Album - 02 Track Two.flac
  size: 1068423
  sha256: 15048ef8cfa2ce499fc6f4223a5d277359694c2bd74d3cb024754125a9a4cbaa
  audio:
    duration_ms: 65000
    overall_bitrate: 131
    audio_bitrate: 131
    sample_rate: 44100
    bit_depth: 16
    channels: 2
    channel_mask: ~
    tags:
      VorbisComments:
        AlbumTitle: Test Album
        Comment: Processed by SoX
        EncoderSoftware: reference libFLAC 1.5.0 20250211
        RecordingDate: "2020"
        TrackArtist: Test Artist
        TrackNumber: "2"
        TrackTitle: Track Two
    pictures:
      - picture_type: CoverFront
        mime_type: Png
        description: ~
        size: 849
        sha256: c73b57d8ad7de5ea9911190a5a1bcebe9b43b6250166b91b12f5c3ee969ba588
- directory: ~
  filename: cover.png
  size: 849
  sha256: c73b57d8ad7de5ea9911190a5a1bcebe9b43b6250166b91b12f5c3ee969ba588
  image:
    width: 100
    height: 100
    color_type: Rgb8
